adición de sección novedades y etiqueta nueva

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                     </div>
                     <ul class="navbar-nav me-auto">
                         <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
+                            <a href="./paginas/novedades.html">NOVEDADES</a>
+                        </li>
+                        <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                             <a href="./paginas/contactos.html">CONTACTOS</a>
                         </li>
                     </ul>
@@ -120,7 +123,7 @@
 
             <h2>Recomendados</h2>
             <div class="lista">
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="./img/the-last-of-us-parte-i-202261012304123_1.jpg" class="card-img-top"
                         alt="the last of us portada">
                     <div class="card-body">
@@ -144,7 +147,7 @@
                     </div>
                 </div>
 
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="./img/bleachremix011-db5742e66babce6afa16730621958737-640-0.webp" class="card-img-top"
                         alt="bleach portada">
                     <div class="card-body">
@@ -168,7 +171,7 @@
                     </div>
                 </div>
 
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="./img/batman_broma_asesina_deluxe_pvc.jpg" class="card-img-top" alt="batman portada">
                     <div class="card-body">
                         <h5 class="card-title">Batman The Killing Joke</h5>
@@ -192,7 +195,7 @@
                     </div>
                 </div>
 
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="./img/D_NQ_NP_939213-MLA53178668757_012023-O.jpg" class="card-img-top"
                         alt="fifa 23 portada">
                     <div class="card-body">
@@ -216,7 +219,7 @@
                     </div>
                 </div>
 
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
                         alt="death note portada">
                     <div class="card-body">
