--- a/paginas/comics.html
+++ b/paginas/comics.html
@@ -73,7 +73,7 @@
             </section>
 
             <div class="lista">
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="../img/Avengers_Vol_1_1.webp" class="card-img-top"
                         alt="avengers portada">
                     <div class="card-body">
@@ -120,7 +120,7 @@
                     </div>
                 </div>
 
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="../img/91U157yeMWL.jpg" class="card-img-top" alt="justice league portada">
                     <div class="card-body">
                         <h5 class="card-title">The New 52 Justice League #1</h5>
@@ -166,7 +166,7 @@
                     </div>
                 </div>
 
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="../img/clean.jpg" class="card-img-top"
                         alt="spiderman portada">
                     <div class="card-body">
@@ -213,7 +213,7 @@
                     </div>
                 </div>
 
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="../img/TMNT_001_29.webp" class="card-img-top"
                         alt="TMNT portada">
                     <div class="card-body">
@@ -260,7 +260,7 @@
                     </div>
                 </div>
 
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="../img/batman_broma_asesina_deluxe_pvc.jpg" class="card-img-top" alt="batman portada">
                     <div class="card-body">
                         <h5 class="card-title">Batman The Killing Joke</h5>
