--- a/paginas/manga.html
+++ b/paginas/manga.html
@@ -75,7 +75,7 @@
             </section>
 
             <div class="lista">
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="../img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
                         alt="death note portada">
                     <div class="card-body">
@@ -106,7 +106,7 @@
                     </div>
                 </div>
 
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="../img/bleachremix011-db5742e66babce6afa16730621958737-640-0.webp" class="card-img-top"
                         alt="bleach portada">
                     <div class="card-body">
@@ -130,7 +130,7 @@
                     </div>
                 </div>
 
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="../img/Volumen_1.webp" class="card-img-top" alt="one piece portada">
                     <div class="card-body">
                         <h5 class="card-title">One Piece #1</h5>
@@ -176,7 +176,7 @@
                     </div>
                 </div>
 
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="../img/Volumen_1 (2).webp" class="card-img-top" alt="chainsaw man portada">
                     <div class="card-body">
                         <h5 class="card-title">Chainsaw-Man #1</h5>
@@ -222,7 +222,7 @@
                     </div>
                 </div>
 
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="../img/Volumen_1 (1).webp" class="card-img-top" alt="vinland saga portada">
                     <div class="card-body">
                         <h5 class="card-title">Vinland Saga #1</h5>
