--- a/paginas/videojuegos.html
+++ b/paginas/videojuegos.html
@@ -72,9 +72,8 @@
                 <p>VIDEOJUEGOS</p>
             </section>
 
-
             <div class="lista">
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="../img/eldenring11-5c93145ed747e47dfe16451397874446-640-0.webp" class="card-img-top"
                         alt="elden ring portada">
                     <div class="card-body">
@@ -113,7 +112,7 @@
                     </div>
                 </div>
 
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="../img/Portada_God_of_War_Ragnarok.webp" class="card-img-top" alt="god of war portada">
                     <div class="card-body">
                         <h5 class="card-title">God of War Ragnarok</h5>
@@ -151,7 +150,7 @@
                     </div>
                 </div>
 
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="../img/horizon-forbidden-west-ps41-f7a81ec08dff386fe216451392749344-640-0.webp" class="card-img-top"
                         alt="horizon portada">
                     <div class="card-body">
@@ -190,7 +189,7 @@
                     </div>
                 </div>
 
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="../img/the-last-of-us-parte-i-202261012304123_1.jpg" class="card-img-top"
                         alt="the last of us portada">
                     <div class="card-body">
@@ -214,7 +213,7 @@
                     </div>
                 </div>
 
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center divLista" style="width: 18rem;">
                     <img src="../img/D_NQ_NP_939213-MLA53178668757_012023-O.jpg" class="card-img-top"
                         alt="fifa 23 portada">
                     <div class="card-body">
